--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "google-youtube": "^1.2.1",
-    "polymer": "Polymer/polymer#^1.2.0"
+    "polymer": "Polymer/polymer#^1.2.0",
+    "app-route": "PolymerElements/app-route#^0.9.2"
   },
   "devDependencies": {
     "test-fixture": "PolymerElements/test-fixture#^1.0.0"
