--- a/psk-www/manifest.json
+++ b/psk-www/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My App",
-  "short_name": "My App",
+  "name": "Herb Torres - Front End Developer",
+  "short_name": "Herb Torres",
   "start_url": "/?homescreen=1",
   "display": "standalone",
   "theme_color": "#3f51b5",
