--- a/psk-www/package.json
+++ b/psk-www/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "herb-torres",
   "license": "BSD-3-Clause",
-  "description": "project template",
+  "description": "Herb Torres Portfolio",
   "scripts": {
     "build": "gulp",
     "start": "gulp serve",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hookerz/941_yt_rewind_2016.git"
+    "url": "https://github.com/herb-t/portfolio.git"
   },
   "author": "matt@byhook.com",
   "devDependencies": {
